--- a/notifico/static/css/less/type.less
+++ b/notifico/static/css/less/type.less
@@ -88,7 +88,9 @@ h4 small { font-size: @baseFontSize; }
 // -------------------------
 
 .page-header {
-  margin: @baseLineHeight 0 10px;
+  padding-bottom: (@baseLineHeight / 2) - 1;
+  margin: @baseLineHeight 0 (@baseLineHeight * 1.5);
+  border-bottom: 1px solid @grayLighter;
 }
 
 
