--- a/notifico/static/css/custom.less
+++ b/notifico/static/css/custom.less
@@ -1,91 +1,74 @@
-.clearfix {
-  *zoom: 1;
-}
-.clearfix:before,
-.clearfix:after {
-  display: table;
-  content: "";
-  line-height: 0;
-}
-.clearfix:after {
-  clear: both;
-}
-.hide-text {
-  font: 0/0 a;
-  color: transparent;
-  text-shadow: none;
-  background-color: transparent;
-  border: 0;
-}
-.input-block-level {
-  display: block;
-  width: 100%;
-  min-height: 30px;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-}
+@import "less/variables.less";
+@import "less/mixins.less";
+
 body {
   font-family: 'Open Sans', sans-serif;
   font-weight: 400;
 }
-h1,
-h2,
-h3,
-h4,
-h5 {
+
+h1, h2, h3, h4, h5 {
   font-weight: 300;
 }
+
 .required {
   color: #DA4F49;
 }
+
 .page-main-navbar {
   margin-bottom: 0;
 }
+
 .page-main-header {
   background-color: whiteSmoke;
   border-bottom: 1px solid #D4D4D4;
   padding-top: 6px;
   padding-bottom: 6px;
 }
+
 .page-main-header a {
-  text-decoration: none;
+   text-decoration: none;
 }
+
 .page-main-actions {
   background-color: whiteSmoke;
   border-bottom: 1px solid #D4D4D4;
 }
+
 .page-main-actions .nav-pills {
   margin-bottom: 0;
 }
+
 .page-main-actions .nav-pills > li > a {
   line-height: 20px;
 }
+
 .page-main-actions .nav-pills > li > a:hover {
   background-color: #29a9df;
   color: white;
-  -webkit-border-radius: 0px;
-  -moz-border-radius: 0px;
-  border-radius: 0px;
+  .border-radius(0px);
 }
+
 .count {
-  font-size: 28px;
+  font-size: 28px; 
   font-weight: 300;
 }
+
 .page-content {
   margin-top: 12px;
 }
+
 .table-square {
-  border: 1px solid #dddddd;
+  border: 1px solid @tableBorder;
 }
+
 .table-vertical tbody td {
   vertical-align: middle;
 }
+
 .btn {
-  -webkit-border-radius: 0px;
-  -moz-border-radius: 0px;
-  border-radius: 0px;
+  .border-radius(0px);
 }
+
 select,
 textarea,
 input[type="text"],
@@ -103,7 +86,5 @@ input[type="search"],
 input[type="tel"],
 input[type="color"],
 .uneditable-input {
-  -webkit-border-radius: 0px;
-  -moz-border-radius: 0px;
-  border-radius: 0px;
+  .border-radius(0px);
 }
