--- a/notifico/static/css/less/alerts.less
+++ b/notifico/static/css/less/alerts.less
@@ -12,6 +12,7 @@
   text-shadow: 0 1px 0 rgba(255,255,255,.5);
   background-color: @warningBackground;
   border: 1px solid @warningBorder;
+  .border-radius(@baseBorderRadius);
   color: @warningText;
 }
 .alert h4 {
