--- a/notifico/static/css/less/buttons.less
+++ b/notifico/static/css/less/buttons.less
@@ -22,6 +22,7 @@
   border: 1px solid @btnBorder;
   *border: 0; // Remove the border to prevent IE7's black border on input:focus
   border-bottom-color: darken(@btnBorder, 10%);
+  .border-radius(@baseBorderRadius);
   .ie7-restore-left-whitespace(); // Give IE7 some love
   .box-shadow(~"inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05)");
 
@@ -74,6 +75,7 @@
 .btn-large {
   padding: @paddingLarge;
   font-size: @fontSizeLarge;
+  .border-radius(@borderRadiusLarge);
 }
 .btn-large [class^="icon-"],
 .btn-large [class*=" icon-"] {
@@ -84,6 +86,7 @@
 .btn-small {
   padding: @paddingSmall;
   font-size: @fontSizeSmall;
+  .border-radius(@borderRadiusSmall);
 }
 .btn-small [class^="icon-"],
 .btn-small [class*=" icon-"] {
@@ -94,6 +97,7 @@
 .btn-mini {
   padding: @paddingMini;
   font-size: @fontSizeMini;
+  .border-radius(@borderRadiusSmall);
 }
 
 
