--- a/notifico/static/css/less/wells.less
+++ b/notifico/static/css/less/wells.less
@@ -10,6 +10,7 @@
   margin-bottom: 20px;
   background-color: @wellBackground;
   border: 1px solid darken(@wellBackground, 7%);
+  .border-radius(0);
   .box-shadow(inset 0 1px 1px rgba(0,0,0,.05));
   blockquote {
     border-color: #ddd;
@@ -20,7 +21,9 @@
 // Sizes
 .well-large {
   padding: 24px;
+  .border-radius(@borderRadiusLarge);
 }
 .well-small {
   padding: 9px;
+  .border-radius(@borderRadiusSmall);
 }
