--- a/notifico/templates/base/body.html
+++ b/notifico/templates/base/body.html
@@ -16,11 +16,11 @@
 </head>
 <body>
     {# Site-wide navbar -#}
-    <div class="navbar navbar-fixed-top navbar-inverse navbar-header">
+    <div class="navbar page-main-navbar">
         <div class="navbar-inner">
-            <ul class="nav">
-                {{ nav_link('public.landing', 'public.landing', 'Home') }}
-            </ul>
+            <a class="brand" href="{{ url_for('public.landing') }}">
+                {{ site_title }}
+            </a>
             <ul class="nav pull-right">
                 {% if g.user %}
                 <li class="dropdown">
@@ -41,39 +41,11 @@
             </ul>
         </div>
     </div>
-    {#
-    {% if g.crumbs %}
-    <div class="container-fluid">
-        <ul class="breadcrumb">
-            {% for title, link in g.crumbs %}
-            <li>
-                <a href="{{ link }}" {% if loop.last %}class="active"{% endif %}>{{ title }}</a>
-                {% if not loop.last %}
-                <span class="divider">/</span>
-                {% endif %}
-            </li>
-            {% endfor %}
-        </ul>
-    </div>
-    {% endif %}
-    #}
-    <div class="container-fluid">
-        {%- with messages = get_flashed_messages(with_categories=True) -%}
-            {%- if messages -%}
-                {%- for category, message in messages %}
-        <div class="alert alert-{{category}}">
-            <button type="button" class="close" data-dismiss="alert">×</button>
-            {{ message }}
-        </div>
-                {%- endfor -%}
-            {%- endif -%}
-        {%- endwith %}
-    </div>
+
     {%- block pre_content -%}{%- endblock %}
-    <div class="container-fluid container-content">
     {%- block content -%}{%- endblock -%}
-    </div>
     {%- block post_content -%}{%- endblock %}
+
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="/js/bootstrap.min.js"></script>
     {% block js -%}{%- endblock -%}
