--- a/notifico/views/account/templates/register.html
+++ b/notifico/views/account/templates/register.html
@@ -1,20 +1,26 @@
 {% extends "base/body.html" %}
 {% import "forms.html" as forms %}
 {% block content %}
-<div class="row-fluid">
-    <div class="span12 well">
-        <form class="form form-horizontal" method='POST' action="{{ request.url }}">
-            <legend>Register</legend>
-            {{ form.hidden_tag() }}
-            {{ forms.render_field(form.username) }}
-            {{ forms.render_field(form.email) }}
-            {{ forms.render_field(form.password) }}
-            {{ forms.render_field(form.confirm) }}
-            <div class="form-actions">
-                <button type="submit" class="btn btn-primary">Create Account</button>
-                <a href="{{ url_for('public.landing') }}" class="btn">Cancel</a>
-            </div>
-        </form>
+<div class="page-main-header">
+    <div class="container">
+        <h1>Register</h1>
+    </div>
+</div>
+<div class="container page-content">
+    <div class="row-fluid">
+        <div class="span12 well">
+            <form class="form form-horizontal" method='POST' action="{{ request.url }}">
+                {{ form.hidden_tag() }}
+                {{ forms.render_field(form.username) }}
+                {{ forms.render_field(form.email) }}
+                {{ forms.render_field(form.password) }}
+                {{ forms.render_field(form.confirm) }}
+                <div class="form-actions">
+                    <button type="submit" class="btn btn-primary">Create Account</button>
+                    <a href="{{ url_for('public.landing') }}" class="btn">Cancel</a>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 {% endblock %}
