--- a/notifico/views/account/templates/settings.html
+++ b/notifico/views/account/templates/settings.html
@@ -1,32 +1,39 @@
 {% extends "base/body.html" %}
 {% import "forms.html" as forms %}
 {% block content %}
-<div class="row-fluid">
-    <div class="span12 well">
-        <form class="form form-horizontal" method="POST" action="{{ url_for('.settings', do='p') }}">
-            <legend>Change Password</legend>
-            {{ password_form.hidden_tag() }}
-            {{ forms.render_field(password_form.old) }}
-            {{ forms.render_field(password_form.password) }}
-            {{ forms.render_field(password_form.confirm) }}
-            <div class="form-actions">
-                <button type="submit" class="btn btn-primary">Change Password</button>
-            </div>
-        </form>
+<div class="page-main-header">
+    <div class="container">
+        <h1>Account Settings</h1>
     </div>
 </div>
-<div class="row-fluid">
-    <div class="span12 well">
-        <form class="form form-horizontal" method="POST" action="{{ url_for('.settings', do='d') }}">
-            <legend>Delete Account</legend>
-            <p>Deleting your account is irreversible. <br/>All projects, hooks, and bots under your account will be <strong>purged</strong>.</p>
-            {{ delete_form.hidden_tag() }}
-            {{ forms.render_field(delete_form.password) }}
-            {{ forms.render_field(delete_form.confirm) }}
-            <div class="form-actions">
-                <button type="submit" class="btn btn-danger">Delete Account</button>
-            </div>
-        </form>
+<div class="container page-content">
+    <div class="row-fluid">
+        <div class="span12 well">
+            <form class="form form-horizontal" method="POST" action="{{ url_for('.settings', do='p') }}">
+                <legend>Change Password</legend>
+                {{ password_form.hidden_tag() }}
+                {{ forms.render_field(password_form.old) }}
+                {{ forms.render_field(password_form.password) }}
+                {{ forms.render_field(password_form.confirm) }}
+                <div class="form-actions">
+                    <button type="submit" class="btn btn-primary">Change Password</button>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="row-fluid">
+        <div class="span12 well">
+            <form class="form form-horizontal" method="POST" action="{{ url_for('.settings', do='d') }}">
+                <legend>Delete Account</legend>
+                <p>Deleting your account is irreversible. <br/>All projects, hooks, and bots under your account will be <strong>purged</strong>.</p>
+                {{ delete_form.hidden_tag() }}
+                {{ forms.render_field(delete_form.password) }}
+                {{ forms.render_field(delete_form.confirm) }}
+                <div class="form-actions">
+                    <button type="submit" class="btn btn-danger">Delete Account</button>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 {% endblock %}
