--- a/notifico/views/projects/templates/new_channel.html
+++ b/notifico/views/projects/templates/new_channel.html
@@ -1,21 +1,27 @@
 {% extends "base/body.html" %}
 {% import "forms.html" as forms %}
 {% block content %}
-<div class="row-fluid">
-    <div class="span12 well">
-        <form class="form form-horizontal" method='POST' action="{{ request.url }}">
-            <legend>Add New Channel</legend>
-            {{ form.hidden_tag() }}
-            {{ forms.render_field(form.channel) }}
-            {{ forms.render_field(form.host) }}
-            {{ forms.render_field(form.port) }}
-            {{ forms.render_field(form.ssl) }}
-            {{ forms.render_field(form.public) }}
-            <div class="form-actions">
-                <button type="submit" class="btn btn-primary">Add Channel</button>
-                <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn">Cancel</a>
-            </div>
-        </form>
+<div class="page-main-header">
+    <div class="container">
+        <h1>Add New Channel</h1>
+    </div>
+</div>
+<div class="container page-content">
+    <div class="row-fluid">
+        <div class="span12 well">
+            <form class="form form-horizontal" method='POST' action="{{ request.url }}">
+                {{ form.hidden_tag() }}
+                {{ forms.render_field(form.channel) }}
+                {{ forms.render_field(form.host) }}
+                {{ forms.render_field(form.port) }}
+                {{ forms.render_field(form.ssl) }}
+                {{ forms.render_field(form.public) }}
+                <div class="form-actions">
+                    <button type="submit" class="btn btn-primary">Add Channel</button>
+                    <a href="{{ url_for('.details', u=g.user.username, p=project.name) }}" class="btn">Cancel</a>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 {% endblock %}
