--- a/notifico/services/templates/plain_desc.html
+++ b/notifico/services/templates/plain_desc.html
@@ -3,7 +3,7 @@ For example, in Python using the <a href="http://docs.python-requests.org/en/lat
 
 <pre class="prettyprint linenums language-python">
 >>> import requests
->>> r = requests.get('<my hook url>', params={
+>>> r = requests.get('my hook url', params={
 ... 	'payload': 'The build has been completed.'
 ... })
 >>> print(r.status_code)
